# MOTO

./: CMakeLists.txt  README.md
FileMerger/: Merger.cpp  Merger.h
FileParsing/cppParsing/: CppFileParsing.cpp  CppFileParsing.h
FileParsing/headerParsing/: headerFileParsing.cpp  headerFileParsing.h
ProjectDirectoryTree/DependencyGraph/MemoryDirectoryTree/: DirMemory.cpp  DirMemory.h
ProjectDirectoryTree/DirectoryRunner/: DirRunner.cpp  DirRunner.h
ProjectDirectoryTree/FileDependencies/: MappingFileDependencies.cpp  MappingFileDependencies.h
src/: include.h  main.cpp
